[gd_scene load_steps=7 format=2]

[ext_resource path="res://nodes/gravity-ball/GravityBall.gd" type="Script" id=1]
[ext_resource path="res://nodes/gravity-ball/Gravity_Ball.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 238.874

[sub_resource type="Curve" id=3]

min_value = -200.0
max_value = 200.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, -200 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]

flags = 4
width = 2048
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]

render_priority = 0
trail_divisor = 1
emission_shape = 2
emission_box_extents = Vector3( 200, 200, 1 )
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 45.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.1
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = -100.0
radial_accel_random = 0.0
radial_accel_curve = SubResource( 4 )
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 1.0
scale_random = 0.0
color = Color( 1, 1, 1, 1 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Emission Shape", "Flags", "Gravity", "Orbit Velocity", "Radial Accel", "Spread" ]

[node name="GravityBall" type="Area2D"]

input_pickable = true
space_override = 1
gravity_point = true
gravity_vec = Vector2( 0, 1 )
gravity = 1024.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="." index="0"]

z_index = -1
texture = ExtResource( 2 )
_sections_unfolded = [ "Visibility", "Z Index" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="SuckParticles" type="Particles2D" parent="." index="2"]

emitting = false
amount = 400
lifetime = 0.5
one_shot = false
preprocess = 0.0
speed_scale = 1.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = true
draw_order = 0
process_material = SubResource( 2 )
texture = null
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Process Material", "Textures", "Time", "Transform" ]

[node name="MoveTween" type="Tween" parent="." index="3"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="EffectTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 6.0
one_shot = true
autostart = false

[connection signal="tween_completed" from="MoveTween" to="." method="_on_MoveTween_tween_completed"]

[connection signal="timeout" from="EffectTimer" to="." method="_on_EffectTimer_timeout"]


